# inkscape2latex

./: .gitignore  .template-uuid  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  TODO.md  _scapex  pyproject.toml
doc/: Makefile  logo.toml  user-manual.md
examples/: .env  Makefile  README.md  figure.toml  layers.json
src/scapex/: __init__.py  cli.py  config.py  constants.py  exporter.py  log.py  mymod.py
