# This project use the `src` layout
# See: https://setuptools.pypa.io/en/latest/userguide/package_discovery.html

# Build system configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata configuration
[project]
name = "scapex"
version = "0.1.0"
# If any dependencies are added in the future, put them here
# dependencies = [
#     "click",
#     "colorlog"
# ]

# Scripts configuration
[project.scripts]
# Will create a `scapex` Bash script, targeting
# -> The `scapex` package
# -> The `cli` module
# -> The `main()` function
scapex-cli = "scapex.cli:main"
